deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d1
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: d1
  template:
    metadata:
      labels:
        app: d1
    spec:
      containers:
      - image: httpd
        name: nginx
        ports:
        - containerPort: 80
