empty.yaml
apiVersion: v1
kind: Pod
metadata:
  name: emptydir-demo
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
    volumeMounts:
    - mountPath: /mnt/data
      name: temp-storage
  volumes:
  - name: temp-storage
    emptyDir: {}
