pod5.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-sidecar
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
  - name: sidecar
    image: busybox
    command: ["/bin/sh", "-c", "while true; do echo Hello from the sidecar; sleep 10; done"]
