canaryservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
spec:
  selector:
    app: my-app
    version: canary
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080  # Specify the fixed node port here
  type: NodePort
