service4.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  selector:
    app: adminer
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080  # Optional: specify a fixed node port, replace with your desired port
  type: NodePort
